[workspace]
members = ["antui", "cheese-locator", "ratdeck"]
resolver = "2"

[workspace.dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"
embedded-hal-0-2 = { package = "embedded-hal", version = "0.2.7", features = ["unproven"] }
embedded-hal-bus = "0.3.0"
mpu6050 = "0.1.6"

rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
rp2040-panic-usb-boot = "0.6.0"

fugit = "0.3.9"
embedded-graphics = "0.8.1"
embedded-graphics-simulator = "0.8.0"
ssd1315 = "0.2.3"
ssd1306 = "0.10.0"

usb-device = "0.3.2"
usbd-serial = "0.2.2"
nb = "1.1.0"
portable-atomic = { version = "*", features = ["critical-section"] }
embedded-alloc = "0.7.0"

mousefood = { git = "https://github.com/junkdog/mousefood.git", branch = "ratatui-embedded-str", default-features = false, features = ["fonts"] }
ratatui = { git = "https://github.com/junkdog/ratatui.git", branch = "embedded-poc-with-layout-cache", default-features = false, features = ["portable-atomic", "layout-cache"] }
tui-big-text = "0.8.2"
tui-markdown = "0.3.7"
tachyonfx = { version = "0.24.0", default-features = false }

mipidsi = "0.9.0"
once_cell = { version = "1.21.3", default-features = false, features = ["alloc", "race", "portable-atomic"] }
libm = "0.2.16"
image = "0.25.9"
color_quant = "1.1"

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
ratatui-core = { git = "https://github.com/junkdog/ratatui.git", branch = "embedded-poc-with-layout-cache" }
