[package]
edition = "2021"
name = "antui"
version = "0.1.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
fugit = "0.3.9"
embedded-graphics = "0.8.1"
ssd1315 = "0.2.3"
rp2040-panic-usb-boot = "0.6.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
ssd1306 = "0.10.0"
nb = "1.1.0"
portable-atomic = { version = "*", features = ["critical-section"] }
embedded-alloc = "0.7.0"

mousefood = { git = "https://github.com/ratatui/mousefood" }
ratatui = { version = "0.30", default-features = false, features = ["portable-atomic"] }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
