[package]
name = "antui"
version = "0.1.0"
description = "A TUI for ants (72x40)"
edition = "2021"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true

rp2040-hal.workspace = true
rp2040-boot2.workspace = true
fugit.workspace = true
embedded-graphics.workspace = true
ssd1315.workspace = true
rp2040-panic-usb-boot.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true
ssd1306.workspace = true
nb.workspace = true
portable-atomic.workspace = true
embedded-alloc.workspace = true

mousefood = { workspace = true, features = ["framebuffer"] }
ratatui.workspace = true
