[package]
name = "cheese-locator"
version = "0.1.0"
description = "Locate the cheese by following the instructions and using Morse code"
edition = "2021"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true
embedded-hal-0-2.workspace = true
embedded-hal-bus.workspace = true
mpu6050.workspace = true

rp2040-hal.workspace = true
rp2040-boot2.workspace = true
fugit.workspace = true
embedded-graphics.workspace = true
ssd1315.workspace = true
rp2040-panic-usb-boot.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true
ssd1306.workspace = true
nb.workspace = true
portable-atomic.workspace = true
embedded-alloc.workspace = true
embedded-graphics-simulator = { workspace = true, optional = true }

mousefood = { workspace = true, features = ["framebuffer"] }
ratatui.workspace = true
tui-big-text.workspace = true

[features]
simulator = ["embedded-graphics-simulator"]

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["simulator"]
