[package]
edition = "2021"
name = "ratdeck"
version = "0.1.0"
default-run = "ratdeck"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = "1.0.0"

rp2040-hal = { version = "0.10", features = ["rt", "critical-section-impl"] }
rp2040-boot2 = "0.3"
fugit = "0.3.9"
embedded-graphics = "0.8.1"
rp2040-panic-usb-boot = "0.6.0"
usb-device = "0.3.2"
usbd-serial = "0.2.2"
portable-atomic = { version = "*", features = ["critical-section"] }
embedded-alloc = "0.7.0"
mipidsi = "0.9.0"
embedded-hal-bus = "0.3.0"
once_cell = { version = "1.21.3", default-features = false, features = ["alloc", "race", "portable-atomic"] }

mousefood = { git = "https://github.com/ratatui/mousefood", default-features = false, features = ["fonts"] }
ratatui = { version = "0.30", default-features = false, features = ["portable-atomic"] }
tui-big-text = "0.8.2"
libm = "0.2.16"
tachyonfx = { version = "0.23.0", default-features = false }
embedded-graphics-simulator = { version = "0.8.0", optional = true }

[features]
simulator = ["embedded-graphics-simulator"]

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["simulator"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[build-dependencies]
tui-markdown = "0.3.7"
