[package]
name = "ratdeck"
version = "0.1.0"
description = "Embedded slideshow tool"
edition = "2021"
default-run = "ratdeck"

[dependencies]
cortex-m.workspace = true
cortex-m-rt.workspace = true
embedded-hal.workspace = true

rp2040-hal.workspace = true
rp2040-boot2.workspace = true
fugit.workspace = true
embedded-graphics.workspace = true
rp2040-panic-usb-boot.workspace = true
usb-device.workspace = true
usbd-serial.workspace = true
portable-atomic.workspace = true
embedded-alloc.workspace = true
mipidsi.workspace = true
embedded-hal-bus.workspace = true
once_cell.workspace = true

mousefood.workspace = true
ratatui.workspace = true
tui-big-text.workspace = true
libm.workspace = true
tachyonfx.workspace = true
embedded-graphics-simulator = { workspace = true, optional = true }

[features]
simulator = ["embedded-graphics-simulator", "ratatui/std"]

[[bin]]
name = "simulator"
path = "src/bin/simulator.rs"
required-features = ["simulator"]

[build-dependencies]
tui-markdown.workspace = true
image.workspace = true
ratatui.workspace = true
color_quant.workspace = true
